<resources>
    <string name="app_name">MobieleApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Pagina voor kotlijst</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empty_not_saved">empty, not saved</string>
    <string name="username">username:</string>
    <string name="streetname">Streetname:</string>
    <string name="housenr">House number:</string>
    <string name="city">City:</string>
    <string name="postcode">Postcode:</string>
    <string name="rent">Rent:</string>
    <string name="description">Description:</string>
    <string name="title_activity_dorm_list">DormListActivity</string>
    <string name="title_activity_details_page">DetailsPageActivity</string>
    <string name="title_activity_maps">mapsActivity</string>
    <string name="title_activity_update_dorm">UpdateDormActivity</string>
    <string name="title_activity_update_profile_pic">UpdateProfilePicActivity</string>
</resources>