<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/Streetname"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:text="@string/streetname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adTitle"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/adTitle"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="adTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/bevestigDorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionValue"
        app:layout_constraintVertical_bias="0.531" />

    <EditText
        android:id="@+id/StreetnameValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/Streetname"
        app:layout_constraintTop_toBottomOf="@+id/adTitleValue" />

    <EditText
        android:id="@+id/adTitleValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/Streetname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Housenr"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/housenr"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Streetname"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/HousenrValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/Housenr"
        app:layout_constraintTop_toBottomOf="@+id/StreetnameValue" />

    <TextView
        android:id="@+id/City"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/city"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Housenr"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/CityValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/City"
        app:layout_constraintTop_toBottomOf="@+id/HousenrValue" />

    <TextView
        android:id="@+id/Postalcode"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/postcode"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/PostalcodeValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/Postalcode"
        app:layout_constraintTop_toBottomOf="@+id/CityValue" />

    <TextView
        android:id="@+id/Rent"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/rent"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Postalcode"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/RentValue"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/Rent"
        app:layout_constraintTop_toBottomOf="@+id/PostalcodeValue" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/DescriptionValue"
        android:layout_width="322dp"
        android:layout_height="120dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        app:layout_constraintVertical_bias="0.077" />

</androidx.constraintlayout.widget.ConstraintLayout>